@@ -2,6 +2,7 @@ package com.example.fastcampusmysql.application.usacase;
 
 import com.example.fastcampusmysql.domain.follow.entity.Follow;
 import com.example.fastcampusmysql.domain.follow.service.FollowReadService;
+import com.example.fastcampusmysql.domain.member.dto.MemberDto;
 import com.example.fastcampusmysql.domain.member.entity.Member;
 import com.example.fastcampusmysql.domain.member.service.MemberReadService;
 import lombok.RequiredArgsConstructor;
@@ -16,13 +17,13 @@ public class GetFollowingMembersUsacase {
     final private MemberReadService memberReadService;
     final private FollowReadService followReadService;
 
-    public List<Member> execute(Long memberId) {
+    public List<MemberDto> execute(Long memberId) {
         var follows = followReadService.getFollowings(memberId);
 
         var memberIds = follows
                 .stream()
                 .map(Follow::getToMemberId)
-                .collect(Collectors.toList());
+                .toList();
         return memberReadService.getMembers(memberIds);
     }
 }
